[package]
name = "cargo-source"
version = "0.0.1"
edition = "2021"
description = "Cargo sources manager"
repository = "https://github.com/rust-china/cargo-source"
authors = ["winter <zwtao90@gmail.com>"]
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.15", features = [ "derive" ] }
ansi_term = "0.12"
toml = "0.5"
toml_edit = "0.19.14"
dirs = "3.0"
