[package]
name = "cargo-source"
version = "0.1.2"
edition = "2021"
description = "Crate registry manager, fast switch between different registries.1"
repository = "https://github.com/rust-china/cargo-source"
authors = ["winter <zwtao90@gmail.com>"]
keywords = ["subcommand", "cargo", "registry"]
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.15" }
ansi_term = "0.12"
toml_edit = "0.19.14"
dirs = "3.0"
reqwest = { version = "0.11", features = ["blocking"] }

[badges]
maintenance = { status = "actively-developed" }
